# ESP-FLY

./: .gitignore  README.md
1.Docs/: ESP-FLY-APP技术实现文档.md  ESP-FLY-MCU技术实现文档.md  ESP-FLY-PC技术实现文档.md  ESP-FLY通信协议接口文档.md
3.Firmware/ESP-FLY/: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults.esp32c3
3.Firmware/ESP-FLY-MCU/: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32
3.Firmware/ESP-FLY-MCU/components/core/crazyflie/: CMakeLists.txt
3.Firmware/ESP-FLY-MCU/components/core/crazyflie/hal/interface/: imu_types.h  pm_esplane.h  sensors.h  sensors_mpu6050.h  usec_time.h
3.Firmware/ESP-FLY-MCU/components/core/crazyflie/hal/src/: pm_esplane.c  sensors.c  sensors_mpu6050.c  usec_time.c
3.Firmware/ESP-FLY-MCU/components/core/crazyflie/modules/interface/: attitude_controller.h  comm.h  commander.h  controller.h  controller_pid.h  estimator.h  estimator_complementary.h  math3d.h  pid.h  power_distribution.h  sensfusion6.h  stabilizer.h  stabilizer_types.h  static_mem.h  system.h  worker.h  zero_calib.h
3.Firmware/ESP-FLY-MCU/components/core/crazyflie/modules/src/: attitude_pid_controller.c  comm.c  commander.c  controller.c  controller_pid.c  estimator.c  estimator_complementary.c  pid.c  power_distribution_stock.c  sensfusion6.c  stabilizer.c  static_mem.c  system.c  worker.c  zero_calib.c
3.Firmware/ESP-FLY-MCU/components/core/crazyflie/utils/interface/: cfassert.h  debug_cf.h  sleepus.h  statsCnt.h  version.h
3.Firmware/ESP-FLY-MCU/components/core/crazyflie/utils/src/: version.c
3.Firmware/ESP-FLY-MCU/components/protocol/: CMakeLists.txt  command_receiver.c  config_receiver.c  data_sender.c  packet_codec.c  protocol_dispatcher.c
3.Firmware/ESP-FLY-MCU/components/protocol/include/: command_receiver.h  config_receiver.h  data_sender.h  packet_codec.h  protocol_dispatcher.h
3.Firmware/ESP-FLY-MCU/main/: CMakeLists.txt  Kconfig.projbuild  main.c
3.Firmware/ESP-FLY/main/: Kconfig.projbuild
4.Hardware/: README.md
5.Software/ESP-FLY-APP/: settings.gradle.kts
5.Software/ESP-FLY-APP/app/: build.gradle.kts
5.Software/ESP-FLY-APP/gradle/: libs.versions.toml
5.Software/ESP-FLY-PC/: .gitignore  BUILD.md  README.md  build_exe.bat  build_exe.spec  create_splash_image.py  main.py  requirements.txt
5.Software/ESP-FLY-PC/common/: __init__.py  logger.py  resource_path.py
5.Software/ESP-FLY-PC/data/: config.ini
5.Software/ESP-FLY-PC/models/: __init__.py  connection_state_model.py  drone_state_model.py  flight_control_model.py  motor_test_model.py  pid_config_model.py
5.Software/ESP-FLY-PC/services/: __init__.py  config_service.py  network_service.py  protocol_service.py
(+82 files in other folders)
