idf_component_register(SRCS "./hal/src/pm_esplane.c" 
                "./hal/src/sensors_mpu6050.c" 
                "./hal/src/sensors.c" 
                "./hal/src/usec_time.c" 
                "./modules/src/attitude_pid_controller.c"
                "./modules/src/comm.c"
                "./modules/src/commander.c"
                "./modules/src/controller_pid.c"
                "./modules/src/controller.c"
                "./modules/src/estimator_complementary.c"
                "./modules/src/estimator.c"
                "./modules/src/static_mem.c"
                "./modules/src/pid.c"
                "./modules/src/power_distribution_stock.c"
                "./modules/src/sensfusion6.c"
                "./modules/src/stabilizer.c"
                "./modules/src/system.c"
                "./modules/src/worker.c"
                "./modules/src/zero_calib.c"
                "./utils/src/abort.c"
                "./utils/src/cfassert.c"
                "./utils/src/filter.c"
                "./utils/src/num.c"
                "./utils/src/sleepus.c"
                "./utils/src/statsCnt.c"
                "./utils/src/version.c"
                "./utils/src/rateSupervisor.c"
                INCLUDE_DIRS "./hal/interface" "./modules/interface" "./utils/interface"
                REQUIRES i2c_bus mpu6050 platform config dsp_lib motors wifi adc esp_timer status_led protocol)

idf_component_get_property( FREERTOS_ORIG_INCLUDE_PATH freertos ORIG_INCLUDE_PATH)
target_include_directories(${COMPONENT_TARGET} PUBLIC
  "${FREERTOS_ORIG_INCLUDE_PATH}"
)
target_compile_options(${COMPONENT_LIB} PRIVATE "-fno-strict-aliasing"
                                                "-Wno-error=stringop-truncation"
                                                "-Wno-error=stringop-overflow"
                                                "-Wno-error=format"
                                                "-Wno-absolute-value"
                                                "-Wno-address-of-packed-member"
                                                "-Wno-stringop-truncation")